# better-nxdthost

./: .gitignore  CMakeLists.txt  Makefile
docs/: README.md  developer_notes.md  udev_rules.txt
scripts/: nxdt_build.sh  nxdt_generator.sh  nxdt_install.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h  progressdialog.cpp  progressdialog.h  usbcommands.h  usbmanager.cpp  usbmanager.h
